6th commit bug fix right sight extra space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+html,
+body {
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 .font1 {
   font-family: cursive, sans-serif;
 }
